<resources>
    <string name="app_name">OmiseAndroid</string>
    <string name="title_charity">Charity List</string>
    <string name="title_donations">Donate</string>
    <string name="charity_item_hint">item name here</string>
    <string name="donation_card_label">Card Number:</string>
    <string name="donation_amount_label">Amount to donate:</string>
    <string name="donation_card_hint">16 digits required</string>
    <string name="donation_amount_hint">enter donation amount in THB</string>
    <string name="donation_button_text">Donate</string>
    <string name="donation_invalid_card_length">Please enter 16 credit card digits</string>
    <string name="donation_invalid_sum">Please enter valid donation amount</string>

    <!-- Accessibility -->
    <string name="charity_item_logo_content_description">Charity Logo Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
